--- a/Italian/main/MiuiHome.apk/res/values-it/plurals.xml
+++ b/Italian/main/MiuiHome.apk/res/values-it/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="editing_mode_title">
+        <item quantity="other">%1$d selezionati</item>
+        <item quantity="one">%1$d selezionato</item>
+    </plurals>
     <plurals name="uninstall_dialog_title_format">
         <item quantity="other">Disinstallare %1$s ed altre %2$d app?</item>
         <item quantity="one">Disinstalla %s</item>
