--- a/Italian/main/Settings.apk/res/values-it/arrays.xml
+++ b/Italian/main/Settings.apk/res/values-it/arrays.xml
@@ -449,52 +449,52 @@
         <item>Dispositivo</item>
     </string-array>
     <string-array name="haptic_feedback_level_entries">
-        <item>Strong</item>
-        <item>Medium</item>
-        <item>Light</item>
+        <item>Forte</item>
+        <item>Medio</item>
+        <item>Leggero</item>
     </string-array>
     <string-array name="media_feedback_level_entries">
-        <item>Strong</item>
-        <item>Medium</item>
-        <item>Light</item>
+        <item>Forte</item>
+        <item>Medio</item>
+        <item>Leggero</item>
     </string-array>
     <string-array name="battery_indicator_style_entries">
-        <item>Graphical</item>
-        <item>Percentage</item>
-        <item>Top bar</item>
+        <item>Grafico</item>
+        <item>Percentuale</item>
+        <item>Barra</item>
     </string-array>
     <string-array name="screen_key_long_press_action">
-        <item>None</item>
-        <item>Show recent apps tray</item>
-        <item>Launch Assistant</item>
-        <item>Launch Google now</item>
-        <item>Close current app</item>
-        <item>Show menu</item>
+        <item>Nessuno</item>
+        <item>Mostra applicazioni recenti</item>
+        <item>Avvia Assistant</item>
+        <item>Avvia Google now</item>
+        <item>Chiudi applicazione attuale</item>
+        <item>Mostra menu</item>
     </string-array>
     <string-array name="power_mode_entries">
-        <item>High performance</item>
-        <item>Balance</item>
-        <item>Battery saving</item>
+        <item>Alte prestazioni</item>
+        <item>Bilanciato</item>
+        <item>Bassi consumi</item>
     </string-array>
     <string-array name="msd_pc_system">
-        <item>Windows XP and older versions of Windows</item>
-        <item>Windows Vista and newer versions of Windows</item>
+        <item>Windows XP e versioni precedenti di Windows</item>
+        <item>Windows Vista e versioni più recenti di Windows</item>
         <item>Mac OS</item>
         <item>Linux</item>
     </string-array>
     <string-array name="preferred_app_entries">
         <item>Launcher</item>
-        <item>Dial</item>
-        <item>Messaging</item>
+        <item>Composizione numero</item>
+        <item>Messaggi</item>
         <item>Browser</item>
-        <item>Camera</item>
-        <item>Gallery</item>
-        <item>Music</item>
+        <item>Fotocamera</item>
+        <item>Galleria</item>
+        <item>Musica</item>
         <item>Email</item>
     </string-array>
     <string-array name="network_speed_slow_summary">
-        <item>Network is slow due to too much traffic</item>
-        <item>Network is slow due to weak signal strength</item>
-        <item>Moving…</item>
+        <item>La rete è lenta per via del traffico intenso</item>
+        <item>La rete è lenta per via del segnale debole</item>
+        <item>In movimento…</item>
     </string-array>
 </resources>
