--- a/Italian/main/Settings.apk/res/values-it/plurals.xml
+++ b/Italian/main/Settings.apk/res/values-it/plurals.xml
@@ -41,15 +41,15 @@
         <item quantity="one">%1$s stampante trovata</item>
     </plurals>
     <plurals name="show_pho_countdown">
-        <item quantity="other">You are now %1$d steps away from entering phone info.</item>
-        <item quantity="one">You are now %1$d step away from entering phone info.</item>
+        <item quantity="other">"Ora sei a %1$d passi dall'inserimento delle info sul telefono."</item>
+        <item quantity="one">"Ora sei a %1$d passo dall'inserimento delle info sul telefono."</item>
     </plurals>
     <plurals name="show_cit_countdown">
-        <item quantity="other">You are now %1$d steps away from entering cit.</item>
-        <item quantity="one">You are now %1$d step away from entering cit.</item>
+        <item quantity="other">"Ora sei a %1$d passi dall'inserimento della cit."</item>
+        <item quantity="one">"Ora sei a %1$d passo dall'inserimento della cit.".</item>
     </plurals>
     <plurals name="show_rep_countdown">
-        <item quantity="other">You are now %1$d steps away from bugreporting.</item>
-        <item quantity="one">You are now %1$d step away from bugreporting.</item>
+        <item quantity="other">"Ora sei a %1$d passi dalla segnalazione bug"</item>
+        <item quantity="one">"Ora sei a %1$d passo dalla segnalazione bug".</item>
     </plurals>
 </resources>
