Keep updating + PR fixes

--- a/Italian/main/Contacts.apk/res/values-it/plurals.xml
+++ b/Italian/main/Contacts.apk/res/values-it/plurals.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--This Italian translation is licenced under www.creativecommons.org/licenses/by-nc-nd/3.0/deed.en by MIUI Italia www.miui.it-->
-<!--This Italian translation is licenced under www.creativecommons.org/licenses/by-nc-nd/3.0/deed.en by MIUI Italia www.miui.it-->
 <resources>
+    <plurals name="searchFoundContacts">
+        <item quantity="other">%d trovati</item>
+        <item quantity="one">1 trovato</item>
+    </plurals>
     <plurals name="listTotalPhoneContacts">
         <item quantity="other">%d contatti con numeri di telefono</item>
         <item quantity="one">1 contatto con numero di telefono</item>
@@ -11,10 +13,6 @@
         <item quantity="one">1 contatto</item>
     </plurals>
     <plurals name="listFoundAllContacts">
-        <item quantity="other">%d trovati</item>
-        <item quantity="one">1 trovato</item>
-    </plurals>
-    <plurals name="searchFoundContacts">
         <item quantity="other">%d trovati</item>
         <item quantity="one">1 trovato</item>
     </plurals>
@@ -33,5 +31,62 @@
     <plurals name="group_list_num_contacts_in_group">
         <item quantity="other">%1$d persone</item>
         <item quantity="one">%1$d persona</item>
+    </plurals>
+    <plurals name="group_list_num_numbers_in_group">
+        <item quantity="other">%1$d numeri</item>
+        <item quantity="one">%1$d numbero</item>
+    </plurals>
+    <plurals name="notification_voicemail_title">
+        <item quantity="other">%1$d messaggi in segreteria</item>
+        <item quantity="one">Messaggio in segreteria</item>
+    </plurals>
+    <plurals name="number_of_items_selected">
+        <item quantity="other">%1$d selezioanti</item>
+        <item quantity="one">%1$d selezionato</item>
+    </plurals>
+    <plurals name="group_add_success_toast">
+        <item quantity="other">" %1$d  contatti aggiunti"</item>
+        <item quantity="one">%1$d contatto aggiunto</item>
+    </plurals>
+    <plurals name="smart_group_member_count">
+        <item quantity="other">%d persone</item>
+        <item quantity="one">1 persona</item>
+    </plurals>
+    <plurals name="numSelectedSimContacts">
+        <item quantity="other">" %1$d selezionati"</item>
+        <item quantity="zero">%1$d selezionato</item>
+        <item quantity="one">%1$d selezionato</item>
+    </plurals>
+    <plurals name="pick_favorites_list_title">
+        <item quantity="other">%1$d preferiti</item>
+        <item quantity="one">%1$d preferito</item>
+    </plurals>
+    <plurals name="pick_recent_list_title">
+        <item quantity="other">%1$d contatti recenti</item>
+        <item quantity="one">1 contatto recente</item>
+    </plurals>
+    <plurals name="hint_search_contacts">
+        <item quantity="other">%1$d contatti</item>
+        <item quantity="one">%1$d contatto</item>
+    </plurals>
+    <plurals name="hint_search_phone_numbers">
+        <item quantity="other">%1$d numeri</item>
+        <item quantity="one">%1$d numero</item>
+    </plurals>
+    <plurals name="hint_search_emails">
+        <item quantity="other">%1$d email di contatto</item>
+        <item quantity="one">1 email di contatto</item>
+    </plurals>
+    <plurals name="pick_favorites_contacts_list_title">
+        <item quantity="other">%1$d preferiti</item>
+        <item quantity="one">%1$d preferito</item>
+    </plurals>
+    <plurals name="pick_recent_contacts_list_title">
+        <item quantity="other">%1$d contatti recenti</item>
+        <item quantity="one">%1$d contatto recente</item>
+    </plurals>
+    <plurals name="device_import_done_toast">
+        <item quantity="other">%1$d contatti importati</item>
+        <item quantity="one">%1$d contatto importato</item>
     </plurals>
 </resources>
