--- a/Italian/main/DeskClock.apk/res/values-it/arrays.xml
+++ b/Italian/main/DeskClock.apk/res/values-it/arrays.xml
@@ -434,4 +434,9 @@
         <item>Tonga</item>
         <item>Giacarta</item>
     </string-array>
+		<string-array name="days">
+        <item>Ieri</item>
+        <item>Oggi</item>
+        <item>Domani</item>
+    </string-array>
 </resources>
