--- a/Italian/main/Calendar.apk/res/values-it/plurals.xml
+++ b/Italian/main/Calendar.apk/res/values-it/plurals.xml
@@ -24,8 +24,8 @@
         <item quantity="one">; per una volta</item>
     </plurals>
     <plurals name="daily">
-        <item quantity="other">Ogni %d giorni</item>
-        <item quantity="one">Ogni giorno</item>
+        <item quantity="other">\u0020Ogni %d giorni</item>
+        <item quantity="one">\u0020Ogni giorno</item>
     </plurals>
     <plurals name="weekly">
         <item quantity="other">Ogni %1$d settimane di %2$s</item>
@@ -44,20 +44,20 @@
         <item quantity="one">Un altro evento</item>
     </plurals>
     <plurals name="recurrence_interval_daily">
-        <item quantity="other">Ogni %d giorni</item>
-        <item quantity="one">Ogni %d giorno</item>
+        <item quantity="other">\u0020Ogni %d giorni</item>
+        <item quantity="one">\u0020Ogni %d giorno</item>
     </plurals>
     <plurals name="recurrence_interval_weekly">
-        <item quantity="other">Ogni %d settimane</item>
-        <item quantity="one">Ogni %d settimana</item>
+        <item quantity="other">\u0020Ogni %d settimane</item>
+        <item quantity="one">\u0020Ogni %d settimana</item>
     </plurals>
     <plurals name="recurrence_interval_monthly">
-        <item quantity="other">Ogni %d mesi</item>
-        <item quantity="one">Ogni %d mese</item>
+        <item quantity="other">\u0020Ogni %d mesi</item>
+        <item quantity="one">\u0020Ogni %d mese</item>
     </plurals>
     <plurals name="recurrence_interval_yearly">
-        <item quantity="other">Ogni %d anni</item>
-        <item quantity="one">Ogni %d anni</item>
+        <item quantity="other">\u0020Ogni %d anni</item>
+        <item quantity="one">\u0020Ogni %d anni</item>
     </plurals>
     <plurals name="recurrence_end_count">
         <item quantity="other">Per %d eventi</item>
