--- a/Italian/device/flo/Email.apk/res/values-it/plurals.xml
+++ b/Italian/device/flo/Email.apk/res/values-it/plurals.xml
@@ -1,33 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <plurals name="move_messages">
-        <item quantity="other">Sposta messaggi</item>
-        <item quantity="one">Sposta messaggio</item>
-    </plurals>
-    <plurals name="message_view_attachment_bytes">
-        <item quantity="other">%d B</item>
-        <item quantity="one">%d B</item>
-    </plurals>
-    <plurals name="message_view_attachment_kilobytes">
-        <item quantity="other">%d Kb</item>
-        <item quantity="one">%d Kb</item>
-    </plurals>
-    <plurals name="message_view_attachment_megabytes">
-        <item quantity="other">%d MB</item>
-        <item quantity="one">%d MB</item>
-    </plurals>
-    <plurals name="message_view_attachment_gigabytes">
-        <item quantity="other">%d GB</item>
-        <item quantity="one">%d GB</item>
-    </plurals>
-    <plurals name="contact_num_selected">
-        <item quantity="other">%d selezionati</item>
-        <item quantity="one">1 selezionato</item>
-    </plurals>
-    <plurals name="num_selected">
-        <item quantity="other">%d selezionati</item>
-        <item quantity="one">1 selezionato</item>
-    </plurals>
     <plurals name="move_conversation">
         <item quantity="other">Sposta %1$d conversazioni</item>
         <item quantity="one">Sposta conversazione</item>
@@ -39,10 +11,6 @@
     <plurals name="confirm_delete_conversation">
         <item quantity="other">Eliminare queste %1$d conversazioni?</item>
         <item quantity="one">Eliminare questa conversazione?</item>
-    </plurals>
-    <plurals name="confirm_delete_conversation_with_sub">
-        <item quantity="other">Queste conversazioni contengono elementi uniti, sicuro di volerle eliminare?</item>
-        <item quantity="one">Questa conversazione contiene elementi uniti, sicuro di volerla eliminare?</item>
     </plurals>
     <plurals name="confirm_archive_conversation">
         <item quantity="other">Archiviare queste %1$d conversazioni?</item>
@@ -100,5 +68,30 @@
     <plurals name="empty_folder_dialog_message">
         <item quantity="other">%1$d messaggi verranno eliminati definitivamente.</item>
         <item quantity="one">%1$d messaggio verrà eliminato definitivamente.</item>
+    </plurals>
+    <plurals name="numSelectedFile">
+        <item quantity="other">" %1$d file selezionati"</item>
+        <item quantity="zero">%1$d file selezionati</item>
+        <item quantity="one">%1$d file selezionato</item>
+    </plurals>
+    <plurals name="move_messages">
+        <item quantity="other">Muovi messaggi</item>
+        <item quantity="one">Muovi messaggio</item>
+    </plurals>
+    <plurals name="message_view_attachment_bytes">
+        <item quantity="other">%dB</item>
+        <item quantity="one">%dB</item>
+    </plurals>
+    <plurals name="message_view_attachment_kilobytes">
+        <item quantity="other">%dKB</item>
+        <item quantity="one">%dKB</item>
+    </plurals>
+    <plurals name="message_view_attachment_megabytes">
+        <item quantity="other">%dMB</item>
+        <item quantity="one">%dMB</item>
+    </plurals>
+    <plurals name="message_view_attachment_gigabytes">
+        <item quantity="other">%dGB</item>
+        <item quantity="one">%dGB</item>
     </plurals>
 </resources>
