--- a/Italian/main/DeskClock.apk/res/values-it/plurals.xml
+++ b/Italian/main/DeskClock.apk/res/values-it/plurals.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <plurals name="alarm_alert_snooze_set">
-        <item quantity="other">Posticipazione di %d minuti.</item>
-        <item quantity="one">Posticipazione di un minuto.</item>
+        <item quantity="other">Rimanda di %d minuti.</item>
+        <item quantity="one">Rimanda di un minuto.</item>
     </plurals>
     <plurals name="snooze_duration">
         <item quantity="other">%d minuti</item>
