--- a/Italian/main/Weather.apk/res/values-it/arrays.xml
+++ b/Italian/main/Weather.apk/res/values-it/arrays.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="weather_type">
-        <item>Sunny</item>
-        <item>Cloudy</item>
-        <item>Overcast</item>
-        <item>Foggy</item>
-        <item>Heavy rainstorm</item>
-        <item>Downpour</item>
-        <item>Rainstorm</item>
-        <item>Thunderstorm</item>
-        <item>Shower</item>
-        <item>Heavy rainfall</item>
-        <item>Moderate rain</item>
-        <item>Light rain</item>
-        <item>Rain and snow mixed</item>
-        <item>Blizzard</item>
-        <item>Snow</item>
-        <item>Heavy snow</item>
-        <item>Moderate snow</item>
-        <item>Light snow</item>
-        <item>Strong sandstorm</item>
-        <item>Sand storm</item>
-        <item>Sand</item>
-        <item>Windy</item>
-        <item>Hail</item>
-        <item>Dust</item>
-        <item>Haze</item>
-        <item>Freezing rain</item>
-        <item>No data</item>
+        <item>Soleggiato</item>
+        <item>Parzialmente nuvoloso</item>
+        <item>Nuvoloso</item>
+        <item>Nebbia</item>
+        <item>Violento temporale</item>
+        <item>Acquazzone</item>
+        <item>Temporale</item>
+        <item>Forte temporale</item>
+        <item>Rovescio di pioggia</item>
+        <item>Pioggia intensa</item>
+        <item>Pioggia moderata</item>
+        <item>Pioggia leggera</item>
+        <item>Alternanza di pioggia e sole</item>
+        <item>Bufera di neve</item>
+        <item>Neve</item>
+        <item>Nevicata pesante</item>
+        <item>Nevicata moderata</item>
+        <item>Nevicata leggera</item>
+        <item>Violenta tempesta di sabbia</item>
+        <item>Tempesta di sabbia</item>
+        <item>Sabbia</item>
+        <item>Ventilato</item>
+        <item>Grandine</item>
+        <item>Polvere</item>
+        <item>Foschia</item>
+        <item>Pioggia gelata</item>
+        <item>Nessun dato</item>
     </string-array>
     <string-array name="weather_indexes_uv_level">
-        <item>Weakest</item>
-        <item>Weak</item>
-        <item>Mid-range</item>
-        <item>Strong</item>
-        <item>Strongest</item>
+        <item>Molto debole</item>
+        <item>Devole</item>
+        <item>Medio</item>
+        <item>Forte</item>
+        <item>Molto forte</item>
     </string-array>
     <string-array name="wind_direction">
-        <item>Wind N</item>
-        <item>Wind NE</item>
-        <item>Wind E</item>
-        <item>Wind SE</item>
-        <item>Wind S</item>
-        <item>Wind SW</item>
-        <item>Wind W</item>
-        <item>Wind NW</item>
+        <item>Vento N</item>
+        <item>Vento NE</item>
+        <item>Vento E</item>
+        <item>Vento SE</item>
+        <item>Vento S</item>
+        <item>Vento SO</item>
+        <item>Vento O</item>
+        <item>Vento NO</item>
     </string-array>
 </resources>
