Add Notes.apk (WIP)

--- a/Italian/main/Notes.apk/res/values-it/arrays.xml
+++ b/Italian/main/Notes.apk/res/values-it/arrays.xml
@@ -19,4 +19,19 @@
         <item>Grande</item>
         <item>Enorme</item>
     </string-array>
+    <string-array name="welcome_notes_content">
+        <item>"Ora si può facilmente annotare idee, appunti, pensieri utilizzando
+"</item>
+        <item>"Attach pictures or contacts
+"</item>
+        <item>"Check off tasks with your finger
+"</item>
+        <item>"e più ggrandi caratteristiche!
+  - Sincronizzare le note con MiCloud
+  - Impostare i promemoria
+
+To learn more, visit
+http://www.miui.com/forum.php?lang=1
+"</item>
+    </string-array>
 </resources>
