--- a/Italian/main/Calendar.apk/res/values-it/arrays.xml
+++ b/Italian/main/Calendar.apk/res/values-it/arrays.xml
@@ -7,55 +7,152 @@
         <item>Allarme</item>
     </string-array>
     <string-array name="reminder_minutes_labels">
+        <item>Mai</item>
         <item>0 minuti</item>
-        <item>1 minuto</item>
         <item>5 minuti</item>
         <item>10 minuti</item>
         <item>15 minuti</item>
-        <item>20 minuti</item>
-        <item>25 minuti</item>
         <item>30 minuti</item>
-        <item>45 minuti</item>
         <item>1 ora</item>
-        <item>2 ore</item>
-        <item>3 ore</item>
-        <item>12 ore</item>
-        <item>24 ore</item>
+        <item>1 giorno</item>
         <item>2 giorni</item>
         <item>1 settimana</item>
     </string-array>
+    <integer-array name="reminder_minutes_values">
+        <item>-1</item>
+        <item>0</item>
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>1440</item>
+        <item>2880</item>
+        <item>10080</item>
+    </integer-array>
     <string-array name="preferences_default_reminder_labels">
-        <item>Nessuno</item>
+        <item>Mai</item>
         <item>0 minuti</item>
-        <item>1 minuto</item>
         <item>5 minuti</item>
         <item>10 minuti</item>
         <item>15 minuti</item>
-        <item>20 minuti</item>
-        <item>25 minuti</item>
         <item>30 minuti</item>
-        <item>45 minuti</item>
         <item>1 ora</item>
-        <item>2 ore</item>
-        <item>3 ore</item>
-        <item>12 ore</item>
-        <item>24 ore</item>
+        <item>1 giorno</item>
         <item>2 giorni</item>
         <item>1 settimana</item>
+    </string-array>
+    <string-array name="preferences_default_reminder_values">
+        <item>-1</item>
+        <item>0</item>
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>30</item>
+        <item>60</item>
+        <item>1440</item>
+        <item>2880</item>
+        <item>10080</item>
     </string-array>
     <string-array name="preferences_week_start_day_labels">
-        <item>Impostazioni predefinite</item>
+        <item>Preferenza default</item>
         <item>Sabato</item>
         <item>Domenica</item>
         <item>Lunedì</item>
     </string-array>
+    <string-array name="timezone_labels">
+        <item>Marshall Islands</item>
+        <item>Midway Island</item>
+        <item>Hawaii</item>
+        <item>Alaska</item>
+        <item>Pacific Time</item>
+        <item>Tijuana</item>
+        <item>Arizona</item>
+        <item>Chihuahua</item>
+        <item>Mountain Time</item>
+        <item>Central America</item>
+        <item>Central Time</item>
+        <item>Mexico City</item>
+        <item>Saskatchewan</item>
+        <item>Bogota</item>
+        <item>Eastern Time</item>
+        <item>Venezuela</item>
+        <item>Atlantic Time (Barbados)</item>
+        <item>Atlantic Time (Canada)</item>
+        <item>Manaus</item>
+        <item>Santiago</item>
+        <item>Newfoundland</item>
+        <item>Brasilia</item>
+        <item>Buenos Aires</item>
+        <item>Greenland</item>
+        <item>Montevideo</item>
+        <item>Mid-Atlantic</item>
+        <item>Azores</item>
+        <item>Cape Verde Islands</item>
+        <item>Casablanca</item>
+        <item>London, Dublin</item>
+        <item>Amsterdam, Berlin</item>
+        <item>Belgrade</item>
+        <item>Brussels</item>
+        <item>Sarajevo</item>
+        <item>Windhoek</item>
+        <item>W. Africa Time</item>
+        <item>Amman, Jordan</item>
+        <item>Athens, Istanbul</item>
+        <item>Beirut, Lebanon</item>
+        <item>Cairo</item>
+        <item>Helsinki</item>
+        <item>Jerusalem</item>
+        <item>Minsk</item>
+        <item>Harare</item>
+        <item>Baghdad</item>
+        <item>Moscow</item>
+        <item>Kuwait</item>
+        <item>Nairobi</item>
+        <item>Tehran</item>
+        <item>Baku</item>
+        <item>Tbilisi</item>
+        <item>Yerevan</item>
+        <item>Dubai</item>
+        <item>Kabul</item>
+        <item>Islamabad, Karachi</item>
+        <item>"Ural'sk"</item>
+        <item>Yekaterinburg</item>
+        <item>Kolkata</item>
+        <item>Sri Lanka</item>
+        <item>Kathmandu</item>
+        <item>Astana</item>
+        <item>Yangon</item>
+        <item>Krasnoyarsk</item>
+        <item>Bangkok</item>
+        <item>Beijing</item>
+        <item>Hong Kong</item>
+        <item>Irkutsk</item>
+        <item>Kuala Lumpur</item>
+        <item>Perth</item>
+        <item>Taipei</item>
+        <item>Seoul</item>
+        <item>Tokyo, Osaka</item>
+        <item>Yakutsk</item>
+        <item>Adelaide</item>
+        <item>Darwin</item>
+        <item>Brisbane</item>
+        <item>Hobart</item>
+        <item>Sydney, Canberra</item>
+        <item>Vladivostok</item>
+        <item>Guam</item>
+        <item>Magadan</item>
+        <item>Auckland</item>
+        <item>Fiji</item>
+        <item>Tonga</item>
+    </string-array>
     <string-array name="availability">
         <item>Occupato</item>
         <item>Disponibile</item>
-        <item>Tentativo</item>
+        <item>Incerto</item>
     </string-array>
     <string-array name="visibility">
-        <item>Predefinito</item>
+        <item>Default</item>
         <item>Privato</item>
         <item>Pubblico</item>
     </string-array>
@@ -67,124 +164,43 @@
         <item>ultimo</item>
     </string-array>
     <string-array name="response_labels1">
-        <item>Nessuna risposta</item>
-        <item>Sì</item>
+        <item>Senza risposta</item>
+        <item>Si</item>
         <item>Forse</item>
         <item>No</item>
     </string-array>
     <string-array name="delete_repeating_labels">
         <item>Solo questo evento</item>
-        <item>Questo e gli eventi futuri</item>
+        <item>Questo ed eventi futuri</item>
         <item>Tutti gli eventi</item>
     </string-array>
     <string-array name="delete_repeating_labels_no_selected">
-        <item>Questo e gli eventi futuri</item>
+        <item>Questo ed eventi futuri</item>
         <item>Tutti gli eventi</item>
     </string-array>
     <string-array name="change_response_labels">
-        <item>Solo questo evento</item>
-        <item>Tutti gli eventi nella serie</item>
+        <item>Solo questa istanza</item>
+        <item>Tutti gli eventi della serie</item>
     </string-array>
     <string-array name="buttons_list">
         <item>Giorno</item>
         <item>Settimana</item>
         <item>Mese</item>
-        <item>Ordine del giorno</item>
-    </string-array>
-    <string-array name="preferences_skip_reminders_labels">
-        <item>Solo se rifiutati</item>
-        <item>Se rifiutati o senza risposta</item>
-    </string-array>
-    <string-array name="recurrence_freq">
-        <item>GIORNALIERA</item>
-        <item>SETTIMANALE</item>
-        <item>MENSILE</item>
-        <item>ANNUALE</item>
-    </string-array>
-    <string-array name="repeat_by_nth_sun">
-        <item>ogni prima domenica</item>
-        <item>ogni seconda domenica</item>
-        <item>ogni terza domenica</item>
-        <item>ogni quarta domenica</item>
-        <item>ogni ultima domenica</item>
-    </string-array>
-    <string-array name="repeat_by_nth_mon">
-        <item>ogni primo lunedì</item>
-        <item>ogni secondo lunedì</item>
-        <item>ogni terzo lunedì</item>
-        <item>ogni quarto lunedì</item>
-        <item>ogni ultimo lunedì</item>
-    </string-array>
-    <string-array name="repeat_by_nth_tues">
-        <item>ogni primo martedì</item>
-        <item>ogni secondo martedì</item>
-        <item>ogni terzo martedì</item>
-        <item>ogni quarto martedì</item>
-        <item>ogni ultimo martedì</item>
-    </string-array>
-    <string-array name="repeat_by_nth_wed">
-        <item>ogni primo mercoledì</item>
-        <item>ogni secondo mercoledì</item>
-        <item>ogni terzo mercoledì</item>
-        <item>ogni quarto mercoledì</item>
-        <item>ogni ultimo mercoledì</item>
-    </string-array>
-    <string-array name="repeat_by_nth_thurs">
-        <item>ogni primo giovedì</item>
-        <item>ogni secondo giovedì</item>
-        <item>ogni terzo giovedì</item>
-        <item>ogni quarto giovedì</item>
-        <item>ogni ultimo giovedì</item>
-    </string-array>
-    <string-array name="repeat_by_nth_fri">
-        <item>ogni primo venerdì</item>
-        <item>ogni secondo venerdì</item>
-        <item>ogni terzo venerdì</item>
-        <item>ogni quarto venerdì</item>
-        <item>ogni ultimo venerdì</item>
-    </string-array>
-    <string-array name="repeat_by_nth_sat">
-        <item>ogni primo sabato</item>
-        <item>ogni secondo sabato</item>
-        <item>ogni terzo sabato</item>
-        <item>ogni quarto sabato</item>
-        <item>ogni ultimo sabato</item>
+        <item>Agenda</item>
     </string-array>
     <string-array name="quick_response_defaults">
-        <item>Esecuzione con un paio di minuti di ritardo.</item>
-        <item>Disponibile tra circa 10 minuti.</item>
-        <item>Continua e inizia senza di me.</item>
-        <item>"Spiacenti, impossibile portare a termine l'operazione. È necessario stabilire una nuova pianificazione."</item>
+        <item>Sto arrivando di corsa, sono in ritardo di qualche minuto.</item>
+        <item>Sarò li in 10 minuti circa.</item>
+        <item>Vai pure ed inizia senza di me.</item>
+        <item>"Mi dispiace, non ce la faccio. Dovremo rimandare."</item>
     </string-array>
-    <string-array name="timezone_rename_labels">
-        <item>Australia centrale - NT</item>
-        <item>Australia centrale - SA</item>
-        <item>Australia orientale - QLD</item>
-        <item>Australia orientale - NSW</item>
-        <item>Standard montagne - Dawson Creek</item>
-        <item>Standard centrale - Saskatchewan</item>
-        <item>Standard orientale - Atikokan</item>
-        <item>"Standard dell'Atlantico - Quebec"</item>
-        <item>Hawaii-Aleutine - Hawaii</item>
-        <item>Hawaii-Aleutine - Alaska</item>
-        <item>Standard del Pacifico - Metlakatla</item>
-        <item>Standard delle montagne - Arizona</item>
-        <item>Pacifico - Baja California</item>
-        <item>Montagne - Chihuahua</item>
-        <item>Centrale - Tamaulipas</item>
-        <item>Montagne - Sonora</item>
-        <item>"Ora dell'Africa orientale"</item>
-        <item>"Ora standard dell'Atlantico"</item>
-        <item>"Ora standard dell'Atlantico"</item>
-        <item>"Ora dell'Europa orientale"</item>
-        <item>Ora di Kaliningrad</item>
-        <item>Amazzonia - Rondônia</item>
-        <item>Brasilia - Pará</item>
+    <string-array name="prefEntries_alerts_vibrateWhen">
+        <item>Sempre</item>
+        <item>Solo in silenzioso</item>
+        <item>Mai</item>
     </string-array>
-    <string-array name="backup_country_names">
-        <item>Sint Maarten</item>
-        <item>Isole BES</item>
-        <item>Curaçao</item>
-        <item>Sudan del Sud</item>
+    <string-array name="widget_style_list">
+        <item>Nero trasparente</item>
+        <item>Sfondo bianco</item>
     </string-array>
 </resources>
