--- a/Italian/main/Calendar.apk/res/values-it/plurals.xml
+++ b/Italian/main/Calendar.apk/res/values-it/plurals.xml
@@ -17,19 +17,7 @@
         <item quantity="one">1 giorno</item>
     </plurals>
     <plurals name="weekN">
-        <item quantity="other">SETTIMANA %d</item>
-    </plurals>
-    <plurals name="endByCount">
-        <item quantity="other">; per %d volte</item>
-        <item quantity="one">; per una volta</item>
-    </plurals>
-    <plurals name="daily">
-        <item quantity="other">\u0020Ogni %d giorni</item>
-        <item quantity="one">\u0020Ogni giorno</item>
-    </plurals>
-    <plurals name="weekly">
-        <item quantity="other">Ogni %1$d settimane di %2$s</item>
-        <item quantity="one">Ogni settimana di %2$s</item>
+        <item quantity="other">Settimana %d</item>
     </plurals>
     <plurals name="month_more_events">
         <item quantity="other">+%d</item>
@@ -40,27 +28,7 @@
         <item quantity="one">1 evento</item>
     </plurals>
     <plurals name="N_remaining_events">
-        <item quantity="other">Altri %d eventi</item>
-        <item quantity="one">Un altro evento</item>
-    </plurals>
-    <plurals name="recurrence_interval_daily">
-        <item quantity="other">\u0020Ogni %d giorni</item>
-        <item quantity="one">\u0020Ogni %d giorno</item>
-    </plurals>
-    <plurals name="recurrence_interval_weekly">
-        <item quantity="other">\u0020Ogni %d settimane</item>
-        <item quantity="one">\u0020Ogni %d settimana</item>
-    </plurals>
-    <plurals name="recurrence_interval_monthly">
-        <item quantity="other">\u0020Ogni %d mesi</item>
-        <item quantity="one">\u0020Ogni %d mese</item>
-    </plurals>
-    <plurals name="recurrence_interval_yearly">
-        <item quantity="other">\u0020Ogni %d anni</item>
-        <item quantity="one">\u0020Ogni anno</item>
-    </plurals>
-    <plurals name="recurrence_end_count">
-        <item quantity="other">Per %d eventi</item>
-        <item quantity="one">Per %d evento</item>
+        <item quantity="other">+%d eventi</item>
+        <item quantity="one">+1 evento</item>
     </plurals>
 </resources>
