--- a/Italian/main/Music.apk/res/values-it/plurals.xml
+++ b/Italian/main/Music.apk/res/values-it/plurals.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <plurals name="Ntracks_search_result_format">
+    <plurals name="Ntracks_search_result">
         <item quantity="other">%d brani correlati</item>
         <item quantity="one">%d brano correlati</item>
+    </plurals>
+    <plurals name="Nexpired_remind">
+        <item quantity="other">%d giorni in scadenza</item>
+        <item quantity="one">%d giorno in scadenza</item>
+    </plurals>
+    <plurals name="NTrackstoDownload">
+        <item quantity="other">%d brani che verranno scaricati.</item>
+        <item quantity="one">1 brano che verrà scaricato.</item>
     </plurals>
     <plurals name="Ntracks_count">
         <item quantity="other">%d canzoni</item>
@@ -15,5 +23,17 @@
     <plurals name="Ntracks_remove_from_playlist">
         <item quantity="other">%d rimossi dalla playlist</item>
         <item quantity="one">1 brano rimosso dalla playlist</item>
+    </plurals>
+    <plurals name="artist_list_fragment_item_count_format">
+        <item quantity="other">%d canzoni</item>
+        <item quantity="one">1 canzone</item>
+    </plurals>
+    <plurals name="send_songs_toast">
+        <item quantity="other">%d canzoni che saranno inviate</item>
+        <item quantity="one">1 canzone che sarà inviata</item>
+    </plurals>
+    <plurals name="folder_songs_count">
+        <item quantity="other">%d canzoni</item>
+        <item quantity="one">1 canzone</item>
     </plurals>
 </resources>
