--- a/Italian/main/miui.apk/res/values-it-rIT/plurals.xml
+++ b/Italian/main/miui.apk/res/values-it-rIT/plurals.xml
@@ -16,7 +16,7 @@
         <item quantity="other">"Un'ora fa"</item>
     </plurals>
     <plurals name="abbrev_half_hour_ago">
-        <item quantity="other">"mezz'ora fa"</item>
+        <item quantity="other">"Mezz'ora fa"</item>
     </plurals>
     <plurals name="a_hour_ago">
         <item quantity="other">"Un'ora fa"</item>
