Fix untranslated .lua in MiBand (thanks iddiek)

--- a/Italian/main/MiBand.apk/res/values-it/arrays.xml
+++ b/Italian/main/MiBand.apk/res/values-it/arrays.xml
@@ -39,11 +39,11 @@
         <item>Personalizza</item>
     </string-array>
     <string-array name="fortune">
-        <item>"E' facile raggiungere l'obbiettivo una volta ma non è facile farlo goni giorno."</item>
+        <item>"E' facile raggiungere l'obbiettivo una volta ma non è facile farlo ogni giorno."</item>
         <item>"Non è semplice raggiungere il proprio obbiettivo tutti i giorni."</item>
         <item>Stai facendo un record ogni giorno!</item>
         <item>Continua a migliorarti!</item>
-        <item>Non sarai mai un perdente finchè non smetterai di provare.</item>
+        <item>Non sarai mai un perdente finché non smetterai di provare.</item>
         <item>"Noi siamo ciò che facciamo ripetutamente. L'eccellenza quindi, non è un azione ma un'abitudine."</item>
         <item>Raggiungi un obbiettivo ogni giorno.</item>
         <item>Continua a sfidare te stesso per migliorare il presente.</item>
