--- a/Italian/device/mocha/Calendar.apk/res/values-it/plurals.xml
+++ b/Italian/device/mocha/Calendar.apk/res/values-it/plurals.xml
@@ -44,7 +44,7 @@
         <item quantity="one">+1 evento</item>
     </plurals>
     <plurals name="recurrence_interval_daily">
-        <item quantity="other">Gogni %d giorni</item>
+        <item quantity="other">Ogni %d giorni</item>
         <item quantity="one">Ogni %d giorno</item>
     </plurals>
     <plurals name="recurrence_interval_weekly">
