--- a/Italian/main/Browser.apk/res/values-it/plurals.xml
+++ b/Italian/main/Browser.apk/res/values-it/plurals.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <plurals name="v5_edit_mode_title">
+        <item quantity="other">%1$d selezionati</item>
+        <item quantity="one">%1$d selezionato</item>
+    </plurals>
     <plurals name="webview_matches_found">
         <item quantity="other">%1$d di %2$d</item>
         <item quantity="one">1 risultato</item>
@@ -7,8 +11,12 @@
     <plurals name="webview_last_num_days">
         <item quantity="other">Ultimi %d giorni</item>
     </plurals>
-    <plurals name="v5_edit_mode_title">
-        <item quantity="other">%1$d selezionati</item>
-        <item quantity="one">%1$d selezionato</item>
+    <plurals name="find_on_page_matches">
+        <item quantity="other">%d risultati</item>
+        <item quantity="one">%d risultato</item>
+    </plurals>
+    <plurals name="adblock_rules_number_text">
+        <item quantity="other">%d elementi bloccati</item>
+        <item quantity="one">%d elemento bloccato</item>
     </plurals>
 </resources>
