--- a/Italian/main/SoundRecorder.apk/res/values-it/arrays.xml
+++ b/Italian/main/SoundRecorder.apk/res/values-it/arrays.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="record_scenes_entries">
-        <item>Per la musica</item>
-        <item>Per la voce umana</item>
+        <item>Musica</item>
+        <item>Voce</item>
+    </string-array>
+    <string-array name="x5_record_scenes_entries">
+        <item>Musica</item>
+        <item>Voce</item>
+        <item>Intervista</item>
     </string-array>
 </resources>
