--- a/Italian/main/SecurityCenter.apk/res/values-it/arrays.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/arrays.xml
@@ -12,6 +12,28 @@
         <item>Frequenza di utilizzo</item>
         <item>Dimensione</item>
     </string-array>
+    <string-array name="auto_clean_time">
+        <item>Tutti i giorni</item>
+        <item>Ogni 3 giorni</item>
+        <item>Ogni 7 giorni</item>
+    </string-array>
+    <string-array name="auto_clean_size">
+        <item>100 MB</item>
+        <item>300 MB</item>
+        <item>500 MB</item>
+        <item>1 GB</item>
+    </string-array>
+    <string-array name="auto_process_mode">
+        <item>Chiedi con messaggio</item>
+        <item>Pulisci in background</item>
+        <item>Mostra messaggio dopo la pulizia</item>
+    </string-array>
+    <string-array name="auto_memory_clean">
+        <item>Tra 1 minuto</item>
+        <item>Tra 5 minuti</item>
+        <item>Tra 10 minuti</item>
+        <item>Mai</item>
+    </string-array>
     <string-array name="power_dialog_auto_clean_memory_items">
         <item>Dopo 1 minuto</item>
         <item>Dopo 5 minuti</item>
