--- a/Italian/main/SecurityCenter.apk/res/values-it/arrays.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/arrays.xml
@@ -63,4 +63,17 @@
         <item>Vibra quando silenzioso</item>
         <item>Vibra sempre</item>
     </string-array>
+    <string-array name="alarm_repeat_type">
+        <item>Una volta</item>
+        <item>Tutti i giorni</item>
+        <item>Giorni lavorativi</item>
+        <item>Infrasettimanale</item>
+        <item>Personalizza</item>
+    </string-array>
+    <string-array name="alarm_repeat_type_no_workdays">
+        <item>Una volta</item>
+        <item>Tutti i giorni</item>
+        <item>Infrasettimanale</item>
+        <item>Personalizza</item>
+    </string-array>
 </resources>
