--- a/Italian/main/MiuiCamera.apk/res/values-it/plurals.xml
+++ b/Italian/main/MiuiCamera.apk/res/values-it/plurals.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <plurals name="delete_selection">
-        <item quantity="other">Eliminare gli elementi selezionati?</item>
-        <item quantity="one">"Eliminare l'elemento selezionato?"</item>
-    </plurals>
+    <item type="plurals" name="APKTOOL_DUMMY_0000">false</item>
 </resources>
